NXP-32854: Impl. a SearchService Scroll API